@@ -70,3 +70,4 @@ Dec 15: Collectables are fully working, door can be open with key now.
 TODO: If not require to rewrite half of the code make maps be able to save progress, Make animation for waterdrop in a basement, make little minigame for fixing the pipe, move on to the sound probably <:
 Dec 16: Fixed puzzle with frog (frog exploded when not all lamps on)
 Dec 17: Started wotk on fix pipe minigame
+Dec 23: Tape appear when LMB clicked and it changes shape depending on mouse pos. It was miracle that I was able to do this.
